<?xml version="1.0" encoding="utf-8"?>
<!-- 
  Copyright (c) 2014, AllSeen Alliance. All rights reserved.

     Permission to use, copy, modify, and/or distribute this software for any
     purpose with or without fee is hereby granted, provided that the above
     copyright notice and this permission notice appear in all copies.

     THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
     WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
     MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
     ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
     WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
     ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
     OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lo_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/app_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/ean"
        android:inputType="text"
        android:imeOptions="actionDone"/>

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:id="@+id/lo_prodCons"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="2dp" 
        android:layout_marginRight="2dp">
           
         <CheckBox
            android:id="@+id/chb_producer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/producer" />

	    <CheckBox
	        android:id="@+id/chb_consumer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/consumer" />
	        
		<Button
            android:id="@+id/b_shutdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/shutdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal" 
        android:id="@+id/lo_prod_msg1" 
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="2dp" 
        android:layout_marginRight="2dp" >
		
        <EditText
            android:id="@+id/msg_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/eymh"
            android:inputType="text"/>

        <TextView
            android:id="@+id/txt_defaultLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defaultLang"
            android:textSize="16sp"
            android:layout_marginLeft="2dp" 
        	android:layout_marginRight="2dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal" 
        android:id="@+id/lo_prod_msg2"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="2dp" 
        android:layout_marginRight="2dp" >
		
	    <EditText
             android:id="@+id/msg_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="@string/eymh" 
             android:inputType="text"/>

	    <Spinner
             android:id="@+id/language_spinnerProducer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
	    
    </LinearLayout>

     <LinearLayout
         android:id="@+id/lo_prod_msgtype"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
         android:layout_marginLeft="2dp"
         android:layout_marginRight="2dp"
         android:orientation="horizontal" >

         <TextView
             android:id="@+id/tv_msgtype"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/msg_type"
             android:textSize="16sp" />

         <Spinner
             android:id="@+id/msgtype_spinner"
             android:layout_width="0dip"
             android:layout_height="wrap_content"
             android:layout_weight="0.62" />

         <TextView
             android:id="@+id/tv_ttl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/ttl"
             android:textSize="16sp" />

         <EditText
             android:id="@+id/et_ttl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="numberSigned"
             android:layout_marginRight="15dp"
             android:text="@string/ttl_dflt" />
     </LinearLayout>
	
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal" 
        android:id="@+id/lo_prod_colors"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="2dp" 
        android:layout_marginRight="2dp" >

         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/text_audio"
             android:textAppearance="?android:attr/textAppearanceMedium" />
			 	
        <CheckBox
            android:id="@+id/chb_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rich_audio" />
        
        <CheckBox
            android:id="@+id/chb_audio_obj_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rich_audio_objPath" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_icon"
            android:layout_marginLeft="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <CheckBox
            android:id="@+id/chb_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rich_icon" />
        
        <CheckBox
            android:id="@+id/chb_icon_obj_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rich_icon_objPath" />
				
	  </LinearLayout>
		
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal" 
        android:id="@+id/lo_prod_sendDelete"
        android:layout_marginBottom="1dp" 
        android:layout_marginLeft="2dp" 
        android:layout_marginRight="2dp" >
		
	    <Button
           android:id="@+id/b_send"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/send" />
	
	     <Button
            android:id="@+id/b_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />
	
		
	    </LinearLayout>
		 
        <RelativeLayout
            android:id="@+id/lo_consumer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/language_spinnerConsumer"
                android:layout_width="96dp"
                 android:layout_marginRight="20dp"
                android:layout_height="wrap_content" />
         
            <ListView
                android:id="@+id/lstv_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/language_spinnerConsumer"
                android:layout_marginTop="5dp">
            </ListView>
            
            <Button
                android:id="@+id/btn_dismiss"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="18dp"
                android:layout_toRightOf="@+id/language_spinnerConsumer"
                android:text="@string/dismiss_btn_label" />

            <Button
                android:id="@+id/btn_action"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="14dp"
                android:layout_toRightOf="@+id/btn_dismiss"
                android:text="@string/action_btn_label" />


        </RelativeLayout>

</LinearLayout>
